{
  "version": 4,
  "terraform_version": "0.12.12",
  "serial": 38,
  "lineage": "34aa19b6-1b1b-329e-8f47-c5f71ec39f0e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:552206884380:loadbalancer/app/cb-load-balancer/16f8f2befe0db5f8",
            "arn_suffix": "app/cb-load-balancer/16f8f2befe0db5f8",
            "dns_name": "cb-load-balancer-994149900.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:552206884380:loadbalancer/app/cb-load-balancer/16f8f2befe0db5f8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cb-load-balancer",
            "security_groups": [
              "sg-08c10607e6bd532d4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0aaa271ad151f001f"
              },
              {
                "subnet_id": "subnet-0b278892bae1be027"
              }
            ],
            "subnets": [
              "subnet-0aaa271ad151f001f",
              "subnet-0b278892bae1be027"
            ],
            "vpc_id": "vpc-0c4846b0e13a8913e",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "depends_on": [
            "aws_security_group.lb",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:552206884380:listener/app/cb-load-balancer/16f8f2befe0db5f8/7dddab40a8c8ec75",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:552206884380:targetgroup/cb-target-group/1f8312d04c864d45",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:552206884380:listener/app/cb-load-balancer/16f8f2befe0db5f8/7dddab40a8c8ec75",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:552206884380:loadbalancer/app/cb-load-balancer/16f8f2befe0db5f8",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_alb.main",
            "aws_alb_target_group.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:552206884380:targetgroup/cb-target-group/1f8312d04c864d45",
            "arn_suffix": "targetgroup/cb-target-group/1f8312d04c864d45",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:552206884380:targetgroup/cb-target-group/1f8312d04c864d45",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "cb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c4846b0e13a8913e"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-079fdfbb6d4139850",
            "domain": "vpc",
            "id": "eipalloc-065c1b1a056897b00",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0afb4ad60e5758b08",
            "private_dns": "ip-172-17-2-105.ap-south-1.compute.internal",
            "private_ip": "172.17.2.105",
            "public_dns": "ec2-65-0-206-254.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.206.254",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.gw"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0ba9612a1e2371744",
            "domain": "vpc",
            "id": "eipalloc-0a4195d2053bf44d6",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-06fec5b7bcedfe18b",
            "private_dns": "ip-172-17-3-143.ap-south-1.compute.internal",
            "private_ip": "172.17.3.143",
            "public_dns": "ec2-35-154-95-251.ap-south-1.compute.amazonaws.com",
            "public_ip": "35.154.95.251",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:552206884380:internet-gateway/igw-04b7b38e58fcccb07",
            "id": "igw-04b7b38e58fcccb07",
            "owner_id": "552206884380",
            "vpc_id": "vpc-0c4846b0e13a8913e"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-065c1b1a056897b00",
            "id": "nat-0cc60a210f9ad4675",
            "network_interface_id": "eni-0afb4ad60e5758b08",
            "private_ip": "172.17.2.105",
            "public_ip": "65.0.206.254",
            "subnet_id": "subnet-0aaa271ad151f001f"
          },
          "depends_on": [
            "aws_eip.gw",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a4195d2053bf44d6",
            "id": "nat-02a9d7cf3d62df75d",
            "network_interface_id": "eni-06fec5b7bcedfe18b",
            "private_ip": "172.17.3.143",
            "public_ip": "35.154.95.251",
            "subnet_id": "subnet-0b278892bae1be027"
          },
          "depends_on": [
            "aws_eip.gw",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04b7b38e58fcccb07",
            "id": "r-rtb-0636a3c2909ace5051080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0636a3c2909ace505",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03e30485a51f6c298",
            "owner_id": "552206884380",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cc60a210f9ad4675",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0c4846b0e13a8913e"
          },
          "depends_on": [
            "aws_nat_gateway.gw",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0de34a61a2edbae06",
            "owner_id": "552206884380",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02a9d7cf3d62df75d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0c4846b0e13a8913e"
          },
          "depends_on": [
            "aws_nat_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0746ac7d302b15d6f",
            "route_table_id": "rtb-03e30485a51f6c298",
            "subnet_id": "subnet-0105380581cbbb5e4"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06361d94548e669cb",
            "route_table_id": "rtb-0de34a61a2edbae06",
            "subnet_id": "subnet-03ebd3d6d0f2a520e"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:552206884380:security-group/sg-077596a55d3f450da",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-077596a55d3f450da",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08c10607e6bd532d4"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "cb-ecs-tasks-security-group",
            "name_prefix": "",
            "owner_id": "552206884380",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0c4846b0e13a8913e"
          },
          "depends_on": [
            "aws_security_group.lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:552206884380:security-group/sg-08c10607e6bd532d4",
            "description": "controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08c10607e6bd532d4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "cb-load-balancer-security-group",
            "name_prefix": "",
            "owner_id": "552206884380",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0c4846b0e13a8913e"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:552206884380:subnet/subnet-0105380581cbbb5e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.17.0.0/24",
            "id": "subnet-0105380581cbbb5e4",
            "map_public_ip_on_launch": false,
            "owner_id": "552206884380",
            "vpc_id": "vpc-0c4846b0e13a8913e"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:552206884380:subnet/subnet-03ebd3d6d0f2a520e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.17.1.0/24",
            "id": "subnet-03ebd3d6d0f2a520e",
            "map_public_ip_on_launch": false,
            "owner_id": "552206884380",
            "vpc_id": "vpc-0c4846b0e13a8913e"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:552206884380:subnet/subnet-0aaa271ad151f001f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.17.2.0/24",
            "id": "subnet-0aaa271ad151f001f",
            "map_public_ip_on_launch": true,
            "owner_id": "552206884380",
            "vpc_id": "vpc-0c4846b0e13a8913e"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:552206884380:subnet/subnet-0b278892bae1be027",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.17.3.0/24",
            "id": "subnet-0b278892bae1be027",
            "map_public_ip_on_launch": true,
            "owner_id": "552206884380",
            "vpc_id": "vpc-0c4846b0e13a8913e"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:552206884380:vpc/vpc-0c4846b0e13a8913e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-04f21abc5f0f57565",
            "default_route_table_id": "rtb-0636a3c2909ace505",
            "default_security_group_id": "sg-0cc892bed607c007a",
            "dhcp_options_id": "dopt-90a26efb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c4846b0e13a8913e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0636a3c2909ace505",
            "owner_id": "552206884380"
          }
        }
      ]
    }
  ]
}